--- a/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import mlflow\n",
+    "from mlflow import MlflowClient"
    ]
   },
   {
@@ -28,25 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mlflow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m id_wt_pt \u001b[39m=\u001b[39m \u001b[39m2665\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39m# retrive the run for the ex id\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m mlflow\u001b[39m.\u001b[39mset_tracking_uri(\u001b[39m\"\u001b[39m\u001b[39mhttp://nodelogin02:5000\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m experiment \u001b[39m=\u001b[39m mlflow\u001b[39m.\u001b[39mset_experiment(\u001b[39m\"\u001b[39m\u001b[39mlung_fun_db15\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m client \u001b[39m=\u001b[39m MlflowClient()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mlflow' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# common hyper parameters: X3D_m, four-output abs PFT values, \n",
     "# from scratch: 2667, from pre-trained weights: 2665\n",
-    "id_wo_pt = 2667\n",
+    "id_wo_pt = 2536\n",
     "id_wt_pt = 2665\n",
     "\n",
     "\n",
@@ -57,12 +47,75 @@
     "run_wo_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wo_pt}%'\")[0]\n",
     "run_wt_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wt_pt}%'\")[0]\n",
     "\n",
-    "keys = ['DLCOc', 'FEV1', 'FVC', 'TLC_He']\n"
+    "keys = ['DLCO_SB', 'FEV1', 'FVC', 'TLC_He']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TLCPP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>icc</th>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>12.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     TLCPP\n",
+       "icc   0.61\n",
+       "r     0.61\n",
+       "mae  12.23"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wo_pt_df = get_metrics(run_wo_pt, ['TLCPP']).astype(float).round(2)\n",
+    "wo_pt_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,30 +125,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_metrics(run, keys):\n",
-    "    df = pd.DataFrame(co)\n",
+    "    metric_ls = ['icc', 'r', 'mae']\n",
+    "    df = pd.DataFrame(columns = keys, index = metric_ls)\n",
     "    for key in keys:\n",
-    "        for metric in ['icc', 'r', 'mae']:\n",
+    "        for metric in metric_ls:\n",
     "            col_name = f\"{merge_type}_{metric}_{mode}_{key}\"  # like: ensemble_icc_test\n",
-    "            run.data.params[col_name]\n",
+    "            \n",
+    "            df[key][metric] = float(run.data.params[col_name])\n",
+    "    return df\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric_ls = ['icc', 'r', 'mae']\n",
+    "pd.DataFrame(columns = keys, index = metric_ls)['FVC']['icc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DLCO_SB</th>\n",
+       "      <th>FEV1</th>\n",
+       "      <th>FVC</th>\n",
+       "      <th>TLC_He</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>icc</th>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>1.20</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     DLCO_SB  FEV1   FVC  TLC_He\n",
+       "icc     0.67  0.71  0.80    0.82\n",
+       "r       0.68  0.72  0.81    0.83\n",
+       "mae     1.20  0.44  0.47    0.60"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wt_pt_df = get_metrics(run_wt_pt, keys).astype(float).round(2)\n",
+    "wt_pt_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DLCO_SB</th>\n",
+       "      <th>FEV1</th>\n",
+       "      <th>FVC</th>\n",
+       "      <th>TLC_He</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>icc</th>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>1.28</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>0.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     DLCO_SB  FEV1   FVC  TLC_He\n",
+       "icc     0.47  0.61  0.67    0.74\n",
+       "r       0.52  0.64  0.68    0.74\n",
+       "mae     1.28  0.45  0.54    0.63"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# For x3d_m, I need the results \n",
-    "\n",
-    "args_dt = run_.data.params  # extract the hyper parameters"
-   ]
+   "source": []
   }
  ],
  "metadata": {
