--- a/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/merge_4fold_testing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,14 @@
     "b_ls.append({0:2645, 1:2646, 2:2673, 3:2684, 4:2695, 'name':''})\n",
     "b_ls.append({0:2643, 1:2644, 2:2671, 3:2681, 4:2694, 'name':''})\n",
     "\n",
+    "b_ls = [{0:2720, 1:2721, 2:2726, 3:2728, 4:2729, 'name':''}]\n",
     "\n",
     "fold_ex_dt_ls = b_ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,24 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2667/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2665/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2663/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2661/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2655/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2654/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2651/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2649/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2647/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2645/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2643/test_pred.csv\n"
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2720/test_pred.csv\n"
      ]
     }
    ],
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,69 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2521/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2527/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2529/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2532/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2534/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2536/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2538/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2540/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2542/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2568/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2570/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2572/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2574/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2576/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2594/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2600/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2605/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2607/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/902/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/904/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/906/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/908/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/910/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/912/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2258/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2140/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2138/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2148/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2144/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2142/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2194/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/429/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2667/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2665/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2663/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2661/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2655/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2654/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2651/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2649/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2647/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2645/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2643/valid_pred.csv\n"
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2720/valid_pred.csv\n"
      ]
     }
    ],
    "source": [
     "ensemble_4folds_validation(fold_ex_dt_ls)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
