--- a/lung_function/scripts/jupyter_notebooks/plot.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/plot.ipynb
@@ -29,14 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex_idr = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2667\"\n",
+    "ex_idr = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2731\"\n",
     "pred_fpath = f\"{ex_idr}/valid_pred.csv\"\n",
     "label_fpath =  f\"{ex_idr}/valid_label.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,36 +44,36 @@
      "output_type": "stream",
      "text": [
       "len_df_label 253\n",
-      "FVC\n",
-      "DLCO_SB linear regression m, b: 0.32177201814844225 3.6704147507683063\n",
-      "DLCO_SB linear regression m, b, r^2: 0.32177201814844236 3.6704147507683054 0.2707602791723919\n",
-      "ave_mae for DLCO_SB is 1.300395256916996\n",
-      "std_mae for DLCO_SB is 1.0874235432199566\n",
-      "mean for DLCO_SB is 0.05928853754940711\n",
-      "std for DLCO_SB is 1.69410821846673\n",
-      "Finish plot of  DLCO_SB\n",
-      "FEV1 linear regression m, b: 0.46902926301748826 1.358200638722629\n",
-      "FEV1 linear regression m, b, r^2: 0.4690292630174885 1.3582006387226282 0.40808872765401455\n",
-      "ave_mae for FEV1 is 0.45454545454545453\n",
-      "std_mae for FEV1 is 0.5361525678359895\n",
-      "mean for FEV1 is -0.019762845849802372\n",
-      "std for FEV1 is 0.702624064609928\n",
+      "['DLCOc', 'FEV1', 'FVC', 'TLC'] yyaayy\n",
+      "DLCOc linear regression m, b: 0.6710410994337663 1.7991286505522126\n",
+      "DLCOc linear regression m, b, r^2: 0.6710410994337662 1.7991286505522148 0.46670565230859296\n",
+      "ave_mae for DLCOc is 1.08300395256917\n",
+      "std_mae for DLCOc is 0.9965492179806751\n",
+      "mean for DLCOc is 0.023715415019762844\n",
+      "std for DLCOc is 1.4715452708730303\n",
+      "Finish plot of  DLCOc\n",
+      "FEV1 linear regression m, b: 0.8015162657708823 0.5644847091409638\n",
+      "FEV1 linear regression m, b, r^2: 0.8015162657708823 0.5644847091409639 0.5393767500939497\n",
+      "ave_mae for FEV1 is 0.38735177865612647\n",
+      "std_mae for FEV1 is 0.5763436807210721\n",
+      "mean for FEV1 is 0.05533596837944664\n",
+      "std for FEV1 is 0.6922076056637103\n",
       "Finish plot of  FEV1\n",
-      "FVC linear regression m, b: 0.583450138302756 1.3480577864350571\n",
-      "FVC linear regression m, b, r^2: 0.583450138302756 1.3480577864350543 0.4624404123264705\n",
-      "ave_mae for FVC is 0.5454545454545454\n",
-      "std_mae for FVC is 0.5988370571836833\n",
-      "mean for FVC is -0.015810276679841896\n",
-      "std for FVC is 0.8098620360065939\n",
+      "FVC linear regression m, b: 0.8642136209612171 0.4638775874564536\n",
+      "FVC linear regression m, b, r^2: 0.8642136209612173 0.46387758745645113 0.6175695376976732\n",
+      "ave_mae for FVC is 0.48616600790513836\n",
+      "std_mae for FVC is 0.5937806152794916\n",
+      "mean for FVC is 0.03557312252964427\n",
+      "std for FVC is 0.7665946512190138\n",
       "Finish plot of  FVC\n",
-      "TLC_He linear regression m, b: 0.7087105283972985 1.444021338349594\n",
-      "TLC_He linear regression m, b, r^2: 0.7087105283972996 1.4440213383495908 0.5471458153046219\n",
-      "ave_mae for TLC_He is 0.6284584980237155\n",
-      "std_mae for TLC_He is 0.6974688818599447\n",
-      "mean for TLC_He is 0.09090909090909091\n",
-      "std for TLC_He is 0.9344294848148085\n",
-      "Finish plot of  TLC_He\n",
-      "r_p_value: {'r_valid_DLCO_SB': 0.5203463069652671, 'r_valid_FEV1': 0.6388182273965064, 'r_valid_FVC': 0.680029714296714, 'r_valid_TLC_He': 0.7396930547900405, 'p_of_rvalid_DLCO_SB': 5.903309968643407e-19, 'p_of_rvalid_FEV1': 2.0513633084890263e-30, 'p_of_rvalid_FVC': 1.0856988192655622e-35, 'p_of_rvalid_TLC_He': 4.508032386187381e-45}\n"
+      "TLC linear regression m, b: 0.9463173540493288 0.20232386527440807\n",
+      "TLC linear regression m, b, r^2: 0.9463173540493298 0.20232386527440482 0.6659582258878016\n",
+      "ave_mae for TLC is 0.6007905138339921\n",
+      "std_mae for TLC is 0.6245309446132976\n",
+      "mean for TLC is -0.015810276679841896\n",
+      "std for TLC is 0.8664514859147031\n",
+      "Finish plot of  TLC\n",
+      "r_p_value: {'r_valid_DLCOc': 0.6831585850361488, 'r_valid_FEV1': 0.73442273255527, 'r_valid_FVC': 0.78585592680699, 'r_valid_TLC': 0.816062636007679, 'p_of_rvalid_DLCOc': 3.977087621993053e-36, 'p_of_rvalid_FEV1': 3.8386230024723893e-44, 'p_of_rvalid_FVC': 2.603797045681463e-54, 'p_of_rvalid_TLC': 1.0619116629165217e-61}\n"
      ]
     }
    ],
