--- a/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# common hyper parameters: X3D_m, four-output abs PFT values, \n",
     "# from scratch: 2667, from pre-trained weights: 2665\n",
-    "id_wo_pt = 2536\n",
+    "id_wo_pt = 2720\n",
     "id_wt_pt = 2665\n",
     "\n",
     "\n",
@@ -47,12 +47,12 @@
     "run_wo_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wo_pt}%'\")[0]\n",
     "run_wt_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wt_pt}%'\")[0]\n",
     "\n",
-    "keys = ['DLCO_SB', 'FEV1', 'FVC', 'TLC_He']\n"
+    "keys = ['DLCOc_SB', 'FEV1', 'FVC', 'TLC_He']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -76,40 +76,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TLCPP</th>\n",
+       "      <th>FEV1</th>\n",
+       "      <th>FVC</th>\n",
+       "      <th>TLC_He</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>icc</th>\n",
-       "      <td>0.61</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>r</th>\n",
-       "      <td>0.61</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mae</th>\n",
-       "      <td>12.23</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.66</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     TLCPP\n",
-       "icc   0.61\n",
-       "r     0.61\n",
-       "mae  12.23"
+       "     FEV1   FVC  TLC_He\n",
+       "icc  0.73  0.82    0.81\n",
+       "r    0.76  0.82    0.85\n",
+       "mae  0.44  0.45    0.66"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wo_pt_df = get_metrics(run_wo_pt, ['TLCPP']).astype(float).round(2)\n",
+    "wo_pt_df = get_metrics(run_wo_pt, keys = ['FEV1', 'FVC', 'TLC_He']).astype(float).round(2)\n",
     "wo_pt_df\n"
    ]
   },
