--- a/lung_function/scripts/jupyter_notebooks/add_parameters_for_previous_runs.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/add_parameters_for_previous_runs.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,9 @@
     "b_ls.append({0:2712, 1:2713, 2:2718, 3:2723, 4:2727, 'name':''})\n",
     "b_ls.append({0:2710, 1:2711, 2:2716, 3:2719, 4:2724, 'name':''})\n",
     "\n",
+    "b_ls = [{0:2740, 1:2741, 2:2744, 3:2746, 4:2748, 'name':''}]\n",
+    "b_ls = [{0:2742, 1:2743, 2:2745, 3:2747, 4:2749, 'name':''}]\n",
+    "\n",
     "fold_ex_dt_ls = b_ls"
    ]
   },
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,23 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2731/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2714/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2712/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2710/test_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2731/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2714/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2712/valid_pred.csv\n",
-      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2710/valid_pred.csv\n"
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2740/test_pred.csv\n",
+      "/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2740/valid_pred.csv\n"
      ]
     }
    ],
@@ -202,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,27 +228,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 2731, 1: 2733, 2: 2734, 3: 2737, 4: 2739, 'name': ''}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Either missing values are present in data or data are unbalanced. Please remove them manually or use nan_policy='omit'.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m pred_fpath \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mparent_dir\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mi[\u001b[39m0\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mmode\u001b[39m}\u001b[39;00m\u001b[39m_pred.csv\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     21\u001b[0m \u001b[39m# add icc\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m icc_value \u001b[39m=\u001b[39m icc(label_fpath, pred_fpath, ignore_1st_column\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     23\u001b[0m icc_value_ensemble \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mensemble_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m k:v  \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m icc_value\u001b[39m.\u001b[39mitems()}  \u001b[39m# update keys\u001b[39;00m\n\u001b[1;32m     24\u001b[0m log_params(icc_value_ensemble)\n",
-      "File \u001b[0;32m~/data/lung_function/lung_function/modules/compute_metrics.py:62\u001b[0m, in \u001b[0;36micc\u001b[0;34m(label_fpath, pred_fpath, ignore_1st_column)\u001b[0m\n\u001b[1;32m     59\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([label, pred], axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m     61\u001b[0m \u001b[39mfor\u001b[39;00m column \u001b[39min\u001b[39;00m original_columns:\n\u001b[0;32m---> 62\u001b[0m     icc \u001b[39m=\u001b[39m pg\u001b[39m.\u001b[39;49mintraclass_corr(data\u001b[39m=\u001b[39;49mdata, targets\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mID\u001b[39;49m\u001b[39m'\u001b[39;49m, raters\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mrater\u001b[39;49m\u001b[39m'\u001b[39;49m, ratings\u001b[39m=\u001b[39;49mcolumn)\u001b[39m.\u001b[39mround(\u001b[39m2\u001b[39m)\n\u001b[1;32m     63\u001b[0m     icc \u001b[39m=\u001b[39m icc\u001b[39m.\u001b[39mset_index(\u001b[39m\"\u001b[39m\u001b[39mType\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     64\u001b[0m     icc \u001b[39m=\u001b[39m icc\u001b[39m.\u001b[39mloc[\u001b[39m'\u001b[39m\u001b[39mICC2\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mICC\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/pingouin/reliability.py:276\u001b[0m, in \u001b[0;36mintraclass_corr\u001b[0;34m(data, targets, raters, ratings, nan_policy)\u001b[0m\n\u001b[1;32m    274\u001b[0m         data \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mdropna(axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, how\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39many\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    275\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 276\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mEither missing values are present in data or \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mdata are unbalanced. Please remove them \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mmanually or use nan_policy=\u001b[39m\u001b[39m'\u001b[39m\u001b[39momit\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         )\n\u001b[1;32m    282\u001b[0m \u001b[39m# Back to long-format\u001b[39;00m\n\u001b[1;32m    283\u001b[0m \u001b[39m# data_wide = data.copy()  # Optional, for PCA\u001b[39;00m\n\u001b[1;32m    284\u001b[0m data \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mreset_index()\u001b[39m.\u001b[39mmelt(id_vars\u001b[39m=\u001b[39mtargets, value_name\u001b[39m=\u001b[39mratings)\n",
-      "\u001b[0;31mValueError\u001b[0m: Either missing values are present in data or data are unbalanced. Please remove them manually or use nan_policy='omit'."
+      "{0: 2740, 1: 2741, 2: 2744, 3: 2746, 4: 2748, 'name': ''}\n",
+      "len_df_label 253\n",
+      "DLCOc_SB\n",
+      "FEV1 linear regression m, b: 0.4100854577954988 1.505593776941129\n",
+      "FEV1 linear regression m, b, r^2: 0.4100854577954994 1.5055937769411278 0.35106044923083257\n",
+      "ave_mae for FEV1 is 0.48221343873517786\n",
+      "std_mae for FEV1 is 0.5802069975254549\n",
+      "mean for FEV1 is -0.023715415019762844\n",
+      "std for FEV1 is 0.7540607001858329\n",
+      "Finish plot of  FEV1\n",
+      "FVC linear regression m, b: 0.5332260973038884 1.5119287982340905\n",
+      "FVC linear regression m, b, r^2: 0.5332260973038888 1.5119287982340879 0.4731963795629008\n",
+      "ave_mae for FVC is 0.4901185770750988\n",
+      "std_mae for FVC is 0.5871660902675073\n",
+      "mean for FVC is 0.023715415019762844\n",
+      "std for FVC is 0.7644722468766219\n",
+      "Finish plot of  FVC\n",
+      "DLCOc_SB linear regression m, b: 0.26520426971111144 3.9388667878214036\n",
+      "DLCOc_SB linear regression m, b, r^2: 0.26520426971111155 3.9388667878214045 0.20468546237440371\n",
+      "ave_mae for DLCOc_SB is 1.308300395256917\n",
+      "std_mae for DLCOc_SB is 1.0996811776016653\n",
+      "mean for DLCOc_SB is -0.08300395256916997\n",
+      "std for DLCOc_SB is 1.7070614987336237\n",
+      "Finish plot of  DLCOc_SB\n",
+      "TLC_He linear regression m, b: 0.5616055631902639 1.9581812065705901\n",
+      "TLC_He linear regression m, b, r^2: 0.5616055631902649 1.9581812065705866 0.47120714036308475\n",
+      "ave_mae for TLC_He is 0.6837944664031621\n",
+      "std_mae for TLC_He is 0.690716410212591\n",
+      "mean for TLC_He is -0.14624505928853754\n",
+      "std for TLC_He is 0.9608727357221899\n",
+      "Finish plot of  TLC_He\n",
+      "len_df_label 63\n",
+      "DLCOc_SB\n",
+      "FEV1 linear regression m, b: 0.333149169218156 1.6947586110150292\n",
+      "FEV1 linear regression m, b, r^2: 0.33314916921815585 1.694758611015029 0.47144846809707375\n",
+      "ave_mae for FEV1 is 0.4444444444444444\n",
+      "std_mae for FEV1 is 0.49690399499995336\n",
+      "mean for FEV1 is -0.09523809523809523\n",
+      "std for FEV1 is 0.6598288790738581\n",
+      "Finish plot of  FEV1\n",
+      "FVC linear regression m, b: 0.4272123151025794 1.8100902352551473\n",
+      "FVC linear regression m, b, r^2: 0.4272123151025794 1.8100902352551462 0.5174315290747245\n",
+      "ave_mae for FVC is 0.6825396825396826\n",
+      "std_mae for FVC is 0.6624964049114034\n",
+      "mean for FVC is -0.30158730158730157\n",
+      "std for FVC is 0.902112523071925\n",
+      "Finish plot of  FVC\n",
+      "DLCOc_SB linear regression m, b: 0.23812080873900932 4.105228302722149\n",
+      "DLCOc_SB linear regression m, b, r^2: 0.2381208087390088 4.10522830272215 0.40025332910200706\n",
+      "ave_mae for DLCOc_SB is 1.3174603174603174\n",
+      "std_mae for DLCOc_SB is 1.257679859653353\n",
+      "mean for DLCOc_SB is -0.5555555555555556\n",
+      "std for DLCOc_SB is 1.734594575729924\n",
+      "Finish plot of  DLCOc_SB\n",
+      "TLC_He linear regression m, b: 0.4399011328707979 2.5024258777579496\n",
+      "TLC_He linear regression m, b, r^2: 0.43990113287079785 2.502425877757951 0.5923023050678976\n",
+      "ave_mae for TLC_He is 0.7619047619047619\n",
+      "std_mae for TLC_He is 0.7911070345636263\n",
+      "mean for TLC_He is -0.5079365079365079\n",
+      "std for TLC_He is 0.9738324857255852\n",
+      "Finish plot of  TLC_He\n"
      ]
     }
    ],
@@ -275,7 +317,7 @@
     "        \n",
     "        with mlflow.start_run(run_id=run_id):\n",
     "            for mode in ['valid', 'test']:\n",
-    "                label_fpath = f\"{parent_dir}{i[1]}/{mode}_label.csv\"\n",
+    "                label_fpath = f\"{parent_dir}{i[0]}/{mode}_label.csv\"\n",
     "                pred_fpath = f\"{parent_dir}{i[0]}/{mode}_pred.csv\"\n",
     "\n",
     "                # add icc\n",
