--- a/lung_function/scripts/jupyter_notebooks/ttest.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/ttest.ipynb
@@ -9,28 +9,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "means of data1: 1.0654664031620553\n",
+      "number of samples: 253\n",
+      "means of data1: 1.2528498023715415\n",
       "means of data2: 1.1251699604743084\n",
-      "t-statistic: -0.7622133054835705\n",
-      "p-value: 0.44628925500971695\n",
+      "t-statistic: 1.8540695617559548\n",
+      "p-value: 0.06489760749881235\n",
+      "不存在显著差异（无法拒绝零假设）\n",
+      "number of samples: 253\n",
+      "means of data1: 0.45665612648221343\n",
+      "means of data2: 0.4096442687747036\n",
+      "t-statistic: 1.6244204419021049\n",
+      "p-value: 0.10553618629522103\n",
+      "不存在显著差异（无法拒绝零假设）\n",
+      "number of samples: 253\n",
+      "means of data1: 0.5574545454545454\n",
+      "means of data2: 0.48424703557312254\n",
+      "t-statistic: 2.0659162754881275\n",
+      "p-value: 0.03985860948720961\n",
+      "存在显著差异（拒绝零假设）\n",
+      "number of samples: 253\n",
+      "means of data1: 0.7049407114624506\n",
+      "means of data2: 0.627403162055336\n",
+      "t-statistic: 1.7903675286638359\n",
+      "p-value: 0.07459520841838102\n",
       "不存在显著差异（无法拒绝零假设）\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from scipy.stats import ttest_ind\n",
+    "from scipy.stats import ttest_rel, ttest_ind\n",
     "\n",
     "# 示例数据\n",
     "ref_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/valid_label.csv\"\n",
-    "data1_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2731/valid_pred.csv\"  # single output\n",
+    "data1_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2594/valid_pred.csv\"  # single output\n",
     "data2_fpath = \"/home/jjia/data/lung_function/lung_function/scripts/results/experiments/2730/valid_pred.csv\"\n",
     "\n",
     "data1 = pd.read_csv(data1_fpath, index_col=0)\n",
@@ -43,11 +62,12 @@
     "\n",
     "for col in ['DLCOc', 'FEV1', 'FVC', 'TLC']:\n",
     "    try:\n",
-    "        # 使用 t 检验比较两列的均值\n",
+    "        # 使用 paired-t 检验比较两列的均值\n",
+    "        print(f\"number of samples: {len(data1[col])}\")\n",
     "        print(f'means of data1: {(data1[col] - ref[col]).abs().mean()}')\n",
     "        print(f'means of data2: {(data2[col] - ref[col]).abs().mean()}')\n",
     "\n",
-    "        t_stat, p_value = ttest_ind((data1[col] - ref[col]).abs(), (data2[col] - ref[col]).abs())\n",
+    "        t_stat, p_value = ttest_rel((data1[col] - ref[col]).abs(), (data2[col] - ref[col]).abs())\n",
     "\n",
     "        # 输出 t 检验结果\n",
     "        print(\"t-statistic:\", t_stat)\n",
@@ -63,6 +83,29 @@
     "            print(\"不存在显著差异（无法拒绝零假设）\")\n",
     "    except:\n",
     "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# 示例数据\n",
+    "data = {\n",
+    "    'group1': [25, 30, 35, 40, 45, 28, 33],\n",
+    "    'group2': [27, 31, 36, 42, 47, 29, 32]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 使用 Seaborn 绘制盒须图\n",
+    "sns.boxplot(data=df)\n",
+    "plt.title(\"Boxplot of Group 1 and Group 2\")\n",
+    "plt.show()\n"
    ]
   }
  ],
