--- a/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
+++ b/lung_function/scripts/jupyter_notebooks/summarize_table.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,110 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# common hyper parameters: X3D_m, four-output abs PFT values, \n",
     "# from scratch: 2667, from pre-trained weights: 2665\n",
-    "id_wo_pt = 2720\n",
-    "id_wt_pt = 2665\n",
-    "\n",
+    "id = 2758\n",
+    "merge_type = 'ensemble'\n",
+    "mode = 'test'  #  or 'test'\n",
     "\n",
     "# retrive the run for the ex id\n",
     "mlflow.set_tracking_uri(\"http://nodelogin02:5000\")\n",
     "experiment = mlflow.set_experiment(\"lung_fun_db15\")\n",
     "client = MlflowClient()\n",
-    "run_wo_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wo_pt}%'\")[0]\n",
-    "run_wt_pt = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id_wt_pt}%'\")[0]\n",
+    "run = client.search_runs(experiment_ids=[experiment.experiment_id], filter_string=f\"params.id LIKE '%{id}%'\")[0]\n",
     "\n",
     "keys = ['DLCOc_SB', 'FEV1', 'FVC', 'TLC_He']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FEV1</th>\n",
-       "      <th>FVC</th>\n",
-       "      <th>TLC_He</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>icc</th>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r</th>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mae</th>\n",
-       "      <td>0.44</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.66</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     FEV1   FVC  TLC_He\n",
-       "icc  0.73  0.82    0.81\n",
-       "r    0.76  0.82    0.85\n",
-       "mae  0.44  0.45    0.66"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wo_pt_df = get_metrics(run_wo_pt, keys = ['FEV1', 'FVC', 'TLC_He']).astype(float).round(2)\n",
-    "wo_pt_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_type = 'ensemble'\n",
-    "mode = 'valid'  #  or 'test'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,28 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric_ls = ['icc', 'r', 'mae']\n",
-    "pd.DataFrame(columns = keys, index = metric_ls)['FVC']['icc']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +94,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DLCO_SB</th>\n",
+       "      <th>DLCOc_SB</th>\n",
        "      <th>FEV1</th>\n",
        "      <th>FVC</th>\n",
        "      <th>TLC_He</th>\n",
@@ -206,49 +103,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>icc</th>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>r</th>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mae</th>\n",
-       "      <td>1.20</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>0.47</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.53</td>\n",
        "      <td>0.60</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r</th>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>1.31</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.82</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     DLCO_SB  FEV1   FVC  TLC_He\n",
-       "icc     0.67  0.71  0.80    0.82\n",
-       "r       0.68  0.72  0.81    0.83\n",
-       "mae     1.20  0.44  0.47    0.60"
+       "     DLCOc_SB  FEV1   FVC  TLC_He\n",
+       "icc      0.52  0.48  0.53    0.60\n",
+       "r        0.60  0.52  0.58    0.67\n",
+       "mae      1.31  0.57  0.67    0.82"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wt_pt_df = get_metrics(run_wt_pt, keys).astype(float).round(2)\n",
-    "wt_pt_df"
+    "summarize = get_metrics(run, keys = keys).astype(float).round(2)\n",
+    "summarize\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +169,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DLCO_SB</th>\n",
+       "      <th>DLCOc_SB</th>\n",
        "      <th>FEV1</th>\n",
        "      <th>FVC</th>\n",
        "      <th>TLC_He</th>\n",
@@ -281,49 +178,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>icc</th>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.74</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>r</th>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.74</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mae</th>\n",
-       "      <td>1.28</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.63</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.83</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     DLCO_SB  FEV1   FVC  TLC_He\n",
-       "icc     0.47  0.61  0.67    0.74\n",
-       "r       0.52  0.64  0.68    0.74\n",
-       "mae     1.28  0.45  0.54    0.63"
+       "     DLCOc_SB  FEV1   FVC  TLC_He\n",
+       "icc      0.48  0.52  0.53    0.58\n",
+       "r        0.56  0.57  0.58    0.66\n",
+       "mae      1.34  0.55  0.68    0.83"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "summarize = get_metrics(run, keys = keys).astype(float).round(2)\n",
+    "summarize"
+   ]
   }
  ],
  "metadata": {
